Resize tab font size. Fix dropdown z-index

--- a/src/js/components/Base/DropDownMenu.sass
+++ b/src/js/components/Base/DropDownMenu.sass
@@ -29,6 +29,7 @@
 
   > div // .Select
     width: 100%
+    z-index: 10
 
     > div
       &:first-of-type // .Select-value
@@ -49,7 +50,7 @@
 
         > div
           &:first-child // .Select-placeholder
-            font-size: 12px
+            font-size: 14px
 
       &:nth-of-type(2) // .Select-menu-outer
         background-color: white
@@ -65,7 +66,7 @@
           border-bottom-right-radius: 2px
 
           > div // .Select-option
-            font-size: 12px
+            font-size: 14px
             font-weight: 400
             padding: 9px 0 10px 12px
             background-color: white
@@ -75,7 +76,7 @@
               background-color: whitesmoke
 
 .valueContainer
-  font-size: 12px
+  font-size: 14px
   overflow: hidden
   white-space: nowrap
   text-overflow: ellipsis
