--- a/src/js/components/Base/Tabs.sass
+++ b/src/js/components/Base/Tabs.sass
@@ -15,7 +15,7 @@
 
     .tabGroupHeading
       text-transform: uppercase
-      font-size: 11px
+      font-size: 14px
       font-weight: 500
       color: $white
       margin-left: 15px
@@ -29,7 +29,7 @@
     line-height: 24px
     height: 24px
 
-    font-size: 12px
+    font-size: 14px
     font-weight: 400
     color: $white
 
